--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -38,7 +38,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxControlToolkit, Version=15.1.2.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\ASP.NET AJAX Control Toolkit\Bin\AjaxControlToolkit.dll</HintPath>
+    </Reference>
+    <Reference Include="AspNet.ScriptManager.jQuery, Version=1.9.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\AspNet.ScriptManager.jQuery.1.9.1\lib\net45\AspNet.ScriptManager.jQuery.dll</HintPath>
+    </Reference>
     <Reference Include="DevExpress.Charts.v14.2.Core, Version=14.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Dashboard.v14.2.Core, Version=14.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Data.v14.2, Version=14.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.DataAccess.v14.2, Version=14.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Office.v14.2.Core, Version=14.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -78,9 +87,6 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
-    </Reference>
-    <Reference Include="AspNet.ScriptManager.jQuery">
-      <HintPath>..\packages\AspNet.ScriptManager.jQuery.1.8.2\lib\net45\AspNet.ScriptManager.jQuery.dll</HintPath>
     </Reference>
     <Reference Include="AspNet.ScriptManager.jQuery.UI.Combined">
       <HintPath>..\packages\AspNet.ScriptManager.jQuery.UI.Combined.1.8.24\lib\net45\AspNet.ScriptManager.jQuery.UI.Combined.dll</HintPath>
@@ -153,8 +159,37 @@
     <Content Include="Account\OpenAuthProviders.ascx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="Account\RegisterExternalLogin.aspx" />
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Icon.png" />
     <Content Include="Orientation.aspx" />
     <Content Include="Doors.aspx" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
+    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\jquery-1.9.1.js" />
+    <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\npm.js" />
+    <Content Include="Spr\LightSystem.aspx" />
+    <Content Include="Spr\HeatSystem.aspx" />
+    <Content Include="Spr\FloorHeat.aspx" />
+    <Content Include="Spr\RoofHeat.aspx" />
+    <Content Include="Spr\FloorType.aspx" />
+    <Content Include="Spr\Floor.aspx" />
+    <Content Include="Spr\Roof.aspx" />
+    <Content Include="Spr\Climat.aspx" />
+    <Content Include="Spr\RoofType.aspx" />
+    <Content Include="Spr\RoofPlace.aspx" />
+    <Content Include="WebForm2.aspx" />
     <Content Include="Windows.aspx" />
     <Content Include="WallHeat.aspx" />
     <Content Include="Wall.aspx" />
@@ -230,11 +265,10 @@
     <Content Include="index.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="BuildingType.aspx" />
-    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.8.2.js" />
-    <Content Include="Scripts\jquery-1.8.2.min.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
@@ -263,8 +297,10 @@
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
+    <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\jquery-1.9.1.min.map" />
     <None Include="Scripts\_references.js" />
     <Content Include="Site.Mobile.Master" />
     <None Include="Web.Debug.config">
@@ -333,6 +369,83 @@
     </Compile>
     <Compile Include="Doors.aspx.designer.cs">
       <DependentUpon>Doors.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\LightSystem.aspx.cs">
+      <DependentUpon>LightSystem.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\LightSystem.aspx.designer.cs">
+      <DependentUpon>LightSystem.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\HeatSystem.aspx.cs">
+      <DependentUpon>HeatSystem.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\HeatSystem.aspx.designer.cs">
+      <DependentUpon>HeatSystem.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\FloorHeat.aspx.cs">
+      <DependentUpon>FloorHeat.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\FloorHeat.aspx.designer.cs">
+      <DependentUpon>FloorHeat.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\RoofHeat.aspx.cs">
+      <DependentUpon>RoofHeat.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\RoofHeat.aspx.designer.cs">
+      <DependentUpon>RoofHeat.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\FloorType.aspx.cs">
+      <DependentUpon>FloorType.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\FloorType.aspx.designer.cs">
+      <DependentUpon>FloorType.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\Floor.aspx.cs">
+      <DependentUpon>Floor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\Floor.aspx.designer.cs">
+      <DependentUpon>Floor.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\Roof.aspx.cs">
+      <DependentUpon>Roof.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\Roof.aspx.designer.cs">
+      <DependentUpon>Roof.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\Climat.aspx.cs">
+      <DependentUpon>Climat.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\Climat.aspx.designer.cs">
+      <DependentUpon>Climat.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\RoofType.aspx.cs">
+      <DependentUpon>RoofType.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\RoofType.aspx.designer.cs">
+      <DependentUpon>RoofType.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Spr\RoofPlace.aspx.cs">
+      <DependentUpon>RoofPlace.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Spr\RoofPlace.aspx.designer.cs">
+      <DependentUpon>RoofPlace.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm2.aspx.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm2.aspx.designer.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
     </Compile>
     <Compile Include="Windows.aspx.cs">
       <DependentUpon>Windows.aspx</DependentUpon>
@@ -414,7 +527,9 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Account\Web.config" />
+    <Content Include="Account\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Site.Master" />
   </ItemGroup>
   <ItemGroup>
